@@ -1,6 +1,6 @@
 Name:		globus-ftp-control
 %global _name %(tr - _ <<< %{name})
-Version:	6.9
+Version:	6.10
 Release:	1%{?dist}
 Vendor:	Globus Support
 Summary:	Globus Toolkit - GridFTP Control Library
@@ -138,6 +138,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_mandir}/man3/*
 
 %changelog
+* Mon Apr 18 2016 Globus Toolkit <support@globus.org> - 6.10-1
+- Updated version numbers
+
 * Mon Apr 18 2016 Globus Toolkit <support@globus.org> - 6.9-1
 - Use prelinks for tests so that they run on El Capitan
 
