@@ -1,3 +1,8 @@
+globus-ftp-control (6.10-1+gt6.@distro@) @distro@; urgency=low
+
+
+ -- Globus Toolkit <support@globus.org>  Mon, 18 Apr 2016 22:59:20 -0400
+
 globus-ftp-control (6.9-1+gt6.@distro@) @distro@; urgency=low
 
   * Use prelinks for tests so that they run on El Capitan
